# komoswitch

./: .gitignore  Cargo.toml  README.md  artifacts.json  changelog.rss  dist-workspace.toml  index.html  oranda.json
.github/workflows/: web.yml
artifacts/: index.html
changelog/: index.html
changelog/v0.1.0/: index.html
changelog/v0.2.0/: index.html
changelog/v0.2.1/: index.html
changelog/v0.3.0/: index.html
changelog/v0.3.0-beta.1/: index.html
src/: komo.rs  main.rs  msgs.rs
src/application/: handlers.rs  layout.rs  mod.rs  paint.rs  settings.rs
src/application/window/: mod.rs
src/utils/: mod.rs
src/window/: mod.rs  settings.rs
wix/: main.wxs
