[package]
name = "komoswitch"
description = "A lightweight native Windows workspace switcher widget for komorebi that integrates directly into the taskbar"
version = "0.2.1"
edition = "2024"


[dependencies]
anyhow = "1.0.99"
env_logger = "0.11.8"
log = { version="0.4.27", features=["release_max_level_off"] }
windows = { version = "0.61.3", features = [
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_WindowsAndMessaging",
  "UI_ViewManagement"
] }
winsafe = { version = "0.0.25", features = ["user", "gdi"] }
komorebi-client = { git = "https://github.com/LGUG2Z/komorebi", tag = "v0.1.38"}
serde_json = "1.0.143"
serde = "1.0.219"
parking_lot = "0.12.4"


[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
